--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,17 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
 
-    implementation 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
-    implementation 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
-    implementation 'com.journeyapps:zxing-android-integration:2.0.1@aar'
-    implementation 'com.google.zxing:core:3.0.1'
+    implementation 'com.journeyapps:zxing-android-embedded:2.3.0@aar'
+    implementation 'com.journeyapps:zxing-android-legacy:2.3.0@aar'
+    implementation 'com.journeyapps:zxing-android-integration:2.3.0@aar'
+    implementation 'com.google.zxing:core:2.3.0'
+
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.koushikdutta.ion:ion:2.+'
+    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
 }
