--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -35,6 +36,12 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.koushikdutta.ion:ion:2.+'
-    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
+
     implementation 'com.google.code.gson:gson:2.8.0'
+
+    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
+    implementation 'com.google.firebase:firebase-core:15.0.2'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
