--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.koushikdutta.ion:ion:2.+'
 
+    implementation 'org.jsoup:jsoup:1.11.3'
+
     implementation 'com.google.code.gson:gson:2.8.0'
 
     implementation 'com.google.android.gms:play-services-gcm:15.0.1'
