--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="alex.winescanner">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -23,9 +24,10 @@
         <activity android:name=".AndroidCameraApi" />
         <activity
             android:name=".ReviewSelectionScreen"
-            android:label="@string/title_activity_review_selection_screen"/>
-        <activity android:name=".BarcodeScanner"
-            android:screenOrientation="portrait"/>
+            android:label="@string/title_activity_review_selection_screen" />
+        <activity
+            android:name=".BarcodeScanner"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
